# libbbs

./: .uncrustify.cfg  CITATION.cff  CMakeLists.txt  NOTES.md  README.md
.github/workflows/: build.yml  cmake-single-platform.yml  gh-pages.yml
cli/: CMakeLists.txt  bbs_cli_key_generation.c  bbs_cli_key_generation.h  main.c
doc/: Doxyfile
doc/man3/: bbs_blind_commit.3  bbs_blind_commit_with_nym.3  bbs_blind_proof_gen.3  bbs_blind_proof_gen_with_nym.3  bbs_blind_proof_verify.3  bbs_blind_proof_verify_with_nym.3  bbs_blind_sign.3  bbs_blind_sign_with_nym.3  bbs_blind_verify.3  bbs_blind_verify_with_nym.3  bbs_ciphersuite.3type  bbs_keygen.3  bbs_keygen_full.3  bbs_proof_gen.3  bbs_proof_verify.3  bbs_sign.3  bbs_verify.3
doc/man7/: bbs.7  bbs_blind.7  bbs_blind_with_nym.7
include/: bbs.h  bbs_blind.h  bbs_blind_with_nym.h  bbs_util.h
src/: CMakeLists.txt  bbs.c  bbs_blind.c  bbs_blind_with_nym.c  bbs_ciphersuites.c  bbs_compressed.c  bbs_util.c  bbs_util.h  compat-endian.h  compat-string.c  compat-string.h  sha256.c  sha256.h  shake256.c  shake256.h  version-fixtures.map  version.map
test/: CMakeLists.txt  bbs_bench_blind.c  bbs_bench_blind_with_nym.c  bbs_bench_e2e.c  bbs_bench_individual.c  bbs_e2e_bench.c  bbs_e2e_blind.c  bbs_e2e_blind_with_nym.c  bbs_e2e_sign_n_proof.c  bbs_experimental_compressed_proofs.c  bbs_experimental_compressed_proofs_250.c  bbs_fix_expand_message.c  bbs_fix_generators.c  bbs_fix_hash_to_scalar.c  bbs_fix_keygen.c  bbs_fix_msg_scalars.c  bbs_fix_proof_gen.c  bbs_fix_proof_verify.c  bbs_fix_sign.c  bbs_fix_verify.c  blind_bbs_fix_commit.c  blind_bbs_fix_generators.c  blind_bbs_fix_proof_gen.c  blind_bbs_fix_sign.c  blind_with_nym_bbs_fix_commit.c  blind_with_nym_bbs_fix_generators.c  blind_with_nym_bbs_fix_proof_gen.c  blind_with_nym_bbs_fix_sign.c  fixtures.c  fixtures.h  fixtures_compiler.c  fixtures_transpiler.c  genfixtures.rb  test_util.h
test/blind_fixtures_data/bls12-381-sha-256/proof/: proof005.json
test/blind_fixtures_data/bls12-381-shake-256/proof/: proof005.json
test/fixtures_data/bls12-381-shake-256/: expandMessage.json
